# StringFinder

./: CMakeLists.txt  README.md  completer.cpp  search.h  search.txx  search_test.h  words.txt
